# Tauri-CRUD-Todo

./: Cargo.toml  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: .env  .gitignore  2  Cargo.toml
src-tauri/src/: commands.rs  database.rs  main.rs
src/components/: Todo.tsx
src/hooks/: useInitializeDatabase.ts  useTodos.ts
