[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }  # Use the appropriate feature
tauri-plugin-sql = { version = "2.0.0-alpha", features = ["mysql"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
mysql = { version = "20.1" , optional = true}  # Downgrade to a compatible version

[features]
default = ["mysql"]
