[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2.0.0-alpha", features = ["mysql"] }
tauri-plugin-shell = "2"

# Data management and async runtime
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
bson = "2.6"
mysql = { version = "20.1", optional = true }  # Set mysql to optional

# Async support and utilities
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Caching and environment management
once_cell = "1.17"
dotenv = "0.15"

[features]
default = ["mysql"]  # Includes mysql as part of default
